change animation effect on hover

--- a/WATCHD.tn/assets/css/cover.css
+++ b/WATCHD.tn/assets/css/cover.css
@@ -1,3 +1,6 @@
+.cover {
+    position: relative;
+}
 .item-content {
     position: absolute;
     background-image: url(../../assets/img/black-gradient-effect.png);
