--- a/WATCHD.tn/assets/css/elements.css
+++ b/WATCHD.tn/assets/css/elements.css
@@ -90,10 +90,9 @@
     height: 180px;
 }
 .episode:hover .episode-img {
-    width: 315px;
-	height: auto;
 	-webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;    
+    transition: .3s ease-in-out; 
+    transform: scale(1.2);
 }
 .episode-content {
     position: absolute;
@@ -141,10 +140,9 @@
     object-fit: cover;
 }
 .poster:hover .poster-img {
-	width: 225px;
-	height: auto;
 	-webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
+    transition: .3s ease-in-out; 
+    transform: scale(1.2);
 }
 .poster-content {
     position: absolute;
